@@ -266,6 +266,28 @@ const uint8_t reverseFluidMap[] =
 	FLUID_MILK
 };
 
+const uint8_t clientToServerFluidMap[] =
+{
+	FLUID_EMPTY,
+	FLUID_WATER,
+	FLUID_MANA,
+	FLUID_BEER,
+	FLUID_MUD,
+	FLUID_BLOOD,
+	FLUID_SLIME,
+	FLUID_RUM,
+	FLUID_LEMONADE,
+	FLUID_MILK,
+	FLUID_WINE,
+	FLUID_LIFE,
+	FLUID_URINE,
+	FLUID_OIL,
+	FLUID_FRUITJUICE,
+	FLUID_COCONUTMILK,
+	FLUID_TEA,
+	FLUID_MEAD
+};
+
 enum ClientFluidTypes_t
 {
 	CLIENTFLUID_EMPTY	= 0x00,
