@@ -8568,16 +8568,14 @@
 	</item>
 	<item id="5463" article="a" name="sugar cane">
 		<attribute key="description" value="It has just been harvested." />
-		<attribute key="decayTo" value="5464" />
+		<attribute key="decayTo" value="5471" />
 		<attribute key="duration" value="240" />
 	</item>
 	<item id="5464" article="a" name="sugar cane">
 		<attribute key="description" value="It can be harvested." />
-		<attribute key="decayTo" value="5466" />
-		<attribute key="duration" value="240" />
 	</item>
 	<item id="5465" article="a" name="burning sugar cane">
-		<attribute key="decayTo" value="5471" />
+		<attribute key="decayTo" value="5464" />
 		<attribute key="duration" value="10" />
 	</item>
 	<item id="5466" article="a" name="sugar cane" />
@@ -8589,7 +8587,10 @@
 		<attribute key="weight" value="3050" />
 	</item>
 	<item fromid="5469" toid="5470" article="a" name="distilling machine" />
-	<item id="5471" article="a" name="sugar cane" />
+	<item id="5471" article="a" name="sugar cane">
+		<attribute key="decayTo" value="5466" />
+		<attribute key="duration" value="240" />
+	</item>
 	<item fromid="5472" toid="5473" article="a" name="ball on chains" />
 	<item fromid="5474" toid="5475" article="an" name="iron maiden" />
 	<item fromid="5476" toid="5477" article="a" name="pillory" />
@@ -8646,10 +8647,12 @@
 	<item id="5513" article="a" name="distilling machine">
 		<attribute key="decayTo" value="5469" />
 		<attribute key="duration" value="15" />
+		<attribute key="fluidSource" value="rum" />
 	</item>
 	<item id="5514" article="a" name="distilling machine">
 		<attribute key="decayTo" value="5470" />
 		<attribute key="duration" value="15" />
+		<attribute key="fluidSource" value="rum" />
 	</item>
 	<item id="5515" article="a" name="closed door">
 		<attribute key="type" value="door" />
@@ -17819,7 +17822,7 @@
 	<item id="10143" article="a" name="cherry blossom tree" />
 	<item id="10150" article="a" name="cocktail glass">
 		<attribute key="weight" value="2000" />
-		<attribute key="allowpickupable" value="1" />
+		<attribute key="pickupable" value="1" />
 	</item>
 	<item id="10151" article="a" name="golem part">
 		<attribute key="weight" value="35" />
@@ -22932,6 +22935,12 @@
 		<attribute key="weight" value="1600" />
 		<attribute key="description" value="It was painted in the style of Lyxoph. Unfortunately, there are some blue pixels in this piece." />
 	</item>
+	<item id="16093" article="a" name="surprise nest">
+		<attribute key="description" value="Use it to get a little surprise." />
+	</item>
+	<item id="16096" article="a" name="dung ball">
+		<attribute key="weight" value="190" />
+	</item>
 	<item id="16102" article="a" name="surprise nest">
 		<attribute key="weight" value="1000" />
 		<attribute key="description" value="Use it to get a little surprise." />
@@ -22987,4 +22996,5 @@
 	<item id="20027" name="rum" />
 	<item id="20028" name="swamp" />
 	<item id="20035" name="tea" />
+	<item id="20043" name="mead" />
 </items>
