@@ -3789,7 +3789,7 @@ void ProtocolGame::AddShopItem(NetworkMessage_ptr msg, const ShopInfo& item)
 	if(it.stackable || it.isRune())
 		msg->AddByte(item.subType);
 	else if(it.isSplash() || it.isFluidContainer())
-		msg->AddByte(fluidMap[item.subType % 8]);
+		msg->AddByte(serverFluidToClient(item.subType));
 	else
 		msg->AddByte(0x00);
 
